# nomad-django

./: .gitignore  README.md  pyproject.toml
config/: settings.py
