[tool.poetry]
name = "nomad-django"
version = "0.1.0"
description = "nomad airbnb clone backend"
authors = ["haru_company coder <godjaewook@naver.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.8"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
